Changed CSS and JS files to relative

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
-    <link rel="stylesheet" href="/Styles/site.css">
+    <link rel="stylesheet" href="Styles/site.css">
     <title>Document</title>
 </head>
 
@@ -112,8 +112,8 @@
         </div>
       <!--This is the end of the code from anime.js-->
         
-    <script src="/JS/anime.min.js"></script>
-    <script src="/JS/main.js"></script>
+    <script src="JS/anime.min.js"></script>
+    <script src="JS/main.js"></script>
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script>
         AOS.init();
